--- a/back/package.json
+++ b/back/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "vitest run",
     "dev": "nodemon src/server.js",
     "start": "node dist/server.js",
     "docs": "jsdoc -c jsdoc.json",
@@ -38,16 +36,13 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
-    "babel-jest": "^30.2.0",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
-    "jest": "^30.2.0",
     "jsdoc": "^4.0.5",
     "nodemon": "^3.1.10",
     "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "vitest": "^4.0.2"
   }
 }
