zod integration, email verification process(incomplete)

--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "vitest run",
-    "dev": "nodemon src/server.js",
+    "dev": "node --watch src/server.js",
     "start": "node dist/server.js",
     "docs": "jsdoc -c jsdoc.json",
     "lint": "eslint . --fix",
@@ -23,13 +23,15 @@
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.1.0",
-    "express-validator": "^7.2.1",
+    "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.1",
-    "pino": "^10.0.0",
+    "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.10",
+    "pino": "^10.1.0",
     "pino-http": "^11.0.0",
+    "redis": "^5.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
@@ -39,10 +41,9 @@
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "jsdoc": "^4.0.5",
-    "nodemon": "^3.1.10",
     "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
-    "vitest": "^4.0.2"
+    "vitest": "^4.0.3"
   }
 }
