--- a/back/.gitignore
+++ b/back/.gitignore
@@ -1,3 +1,25 @@
-node_modules
+# Dependencies
+/node_modules
+
+# Environment variables
 .env
-dist
+.env.*.local
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Production/build artifacts
+/dist
+/build
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# Misc
+.DS_Store
+.eslintcache
