--- a/back/package.json
+++ b/back/package.json
@@ -5,8 +5,13 @@
   "main": "src/app.js",
   "scripts": {
     "test": "vitest run",
-    "dev": "node --watch src/server.js",
-    "start": "node dist/server.js",
+    "dev:server": "node --watch src/server.js",
+    "dev:worker": "node --watch src/worker.js",
+    "start": "pm2 start ecosystem.config.js --env production",
+    "reload": "pm2 reload ecosystem.config.js --env production",
+    "stop": "pm2 stop all",
+    "restart": "pm2 restart all",
+    "logs": "pm2 logs",
     "docs": "jsdoc -c jsdoc.json",
     "lint": "eslint . --fix",
     "format": "prettier --write \"**/*.{js,json,md}\""
@@ -18,6 +23,7 @@
   "dependencies": {
     "@exortek/express-mongo-sanitize": "^1.1.1",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.61.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -26,12 +32,12 @@
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "nodemailer": "^7.0.10",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
-    "redis": "^5.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
