robust error handling

--- a/back/package.json
+++ b/back/package.json
@@ -7,8 +7,11 @@
     "test": "vitest run",
     "dev:server": "node --watch src/server.js",
     "dev:worker": "node --watch src/worker.js",
-    "start": "pm2 start ecosystem.config.js --env production",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start:server": "pm2-runtime start ecosystem.config.js --only api-server --env production",
+    "start:worker": "pm2-runtime start ecosystem.config.js --only email-worker --env production",
     "reload": "pm2 reload ecosystem.config.js --env production",
+    "build": "npm install && npm run lint && npm test",
     "stop": "pm2 stop all",
     "restart": "pm2 restart all",
     "logs": "pm2 logs",
