--- a/back/package.json
+++ b/back/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "test": "vitest run",
     "dev:server": "node --watch src/server.js",
     "dev:worker": "node --watch src/worker.js",
     "start": "pm2-runtime start ecosystem.config.js --env production",
-    "start:server": "pm2-runtime start ecosystem.config.js --only api-server --env production",
-    "start:worker": "pm2-runtime start ecosystem.config.js --only email-worker --env production",
     "reload": "pm2 reload ecosystem.config.js --env production",
     "build": "npm install && npm run lint && npm test",
     "stop": "pm2 stop all",
@@ -17,12 +16,13 @@
     "logs": "pm2 logs",
     "docs": "jsdoc -c jsdoc.json",
     "lint": "eslint . --fix",
-    "format": "prettier --write \"**/*.{js,json,md}\""
+    "format": "prettier --write \"**/*.{js,json,md}\"",
+    "start:server": "pm2-runtime start ecosystem.config.js --only api-server --env production",
+    "start:worker": "pm2-runtime start ecosystem.config.js --only email-worker --env production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "@exortek/express-mongo-sanitize": "^1.1.1",
     "bcrypt": "^6.0.0",
@@ -30,7 +30,6 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
@@ -41,6 +40,7 @@
     "nodemailer": "^7.0.10",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
+    "express-mongo-sanitize": "^2.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
