--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@auth/database",
   "version": "1.0.0",
-  "main": "src/index.js",
   "type": "module",
+  "main": "src/index.js",
+  "scripts": {
+    "lint": "eslint ."
+  },
   "dependencies": {
     "mongoose": "^8.19.2",
     "@auth/config": "workspace:*",
