--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@auth/utils",
   "version": "1.0.0",
+  "type": "module",
   "main": "src/index.js",
   "exports": {
     ".": "./src/index.js"
   },
-  "type": "module",
+  "scripts": {
+    "lint": "eslint ."
+  },
   "dependencies": {
     "uuid": "^13.0.0",
     "@auth/config": "workspace:*"
