--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "auth-monorepo",
   "private": true,
+  "type": "module",
   "scripts": {
     "start-dev": "turbo dev",
     "dev:api": "pnpm --filter @auth/api dev",
@@ -10,10 +11,14 @@
     "build": "turbo run build"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@vitest/coverage-v8": "^4.0.6",
-    "eslint": "^9.39.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-security": "^3.0.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "globals": "^16.5.0",
     "prettier": "^3.6.2",
     "turbo": "^2.6.0",
     "vitest": "^4.0.6"
