--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch src/index.js",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@auth/config": "workspace:*",
@@ -22,7 +23,7 @@
     "pino-pretty": "^13.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^3.23.8"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "supertest": "^7.1.4"
