--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "pino-http": "^11.0.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   }
