--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dev": "node --watch src/index.js"
   },
   "dependencies": {
     "@auth/config": "workspace:*",
