--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@vitest/coverage-v8": "^4.0.7",
+    "@vitest/coverage-v8": "^4.0.8",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-node": "^0.3.9",
@@ -21,7 +21,12 @@
     "globals": "^16.5.0",
     "prettier": "^3.6.2",
     "turbo": "^2.6.0",
-    "vitest": "^4.0.7"
+    "vitest": "^4.0.8"
   },
-  "packageManager": "pnpm@10.19.0"
+  "packageManager": "pnpm@10.19.0",
+  "pnpm": {
+    "overrides": {
+      "tmp": ">=0.2.4"
+    }
+  }
 }
