--- a/packages/queues/package.json
+++ b/packages/queues/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "type": "module",
+  "scripts": {
+    "test": "vitest run --coverage"
+  },
   "exports": {
     ".": "./src/index.js",
     "./producers": "./src/producers/index.js"
