--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,7 +7,8 @@
     ".": "./src/index.js"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "uuid": "^13.0.0"
