--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@auth/config": "workspace:*",
