--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -11,5 +11,8 @@
     "@auth/utils": "workspace:*",
     "bcrypt": "^6.0.0",
     "mongoose": "^8.19.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0"
   }
 }
