feat: Implement Circuit Breaker for Email Service and enhance error handling
This commit introduces significant improvements across several modules:

- **Email Service ():**
  - Integrated the Circuit Breaker pattern using  to enhance the resilience of email sending, preventing cascading failures.
  - Added comprehensive unit tests for the email service, covering circuit breaker states, SMTP verification, and email dispatch.
  - Updated dependencies to include  and  for testing.

- **Validation & Error Handling (, ):**
  - Refined the  middleware by removing unused utility functions and adding specific test cases for Zod errors.
  - Improved  tests for  and .
  - Simplified  constructor for cleaner error representation.

- **User Model ():**
  - Modified the  model definition to prevent  in development/testing environments.

- **Email Worker Consumer ():**
  - Made the LANG=en_US.UTF-8
LANGUAGE=
LC_CTYPE="en_US.UTF-8"
LC_NUMERIC=en_US.UTF-8
LC_TIME=en_US.UTF-8
LC_COLLATE="en_US.UTF-8"
LC_MONETARY=en_US.UTF-8
LC_MESSAGES="en_US.UTF-8"
LC_PAPER=en_US.UTF-8
LC_NAME=en_US.UTF-8
LC_ADDRESS=en_US.UTF-8
LC_TELEPHONE=en_US.UTF-8
LC_MEASUREMENT=en_US.UTF-8
LC_IDENTIFICATION=en_US.UTF-8
LC_ALL= field optional for  jobs, defaulting to en for increased flexibility.

- **Dependency Updates:**
  - Updated  and  packages to their latest versions.

--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -7,6 +7,13 @@
     "@auth/config": "workspace:*",
     "@auth/utils": "workspace:*",
     "nodemailer": "^7.0.10",
+    "opossum": "^9.0.0",
     "resend": "^6.4.2"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.8"
+  },
+  "scripts": {
+    "test": "vitest run --coverage"
   }
 }
