feat: Fix Redis import inconsistency and related test failures
This commit addresses the Redis import inconsistency identified in the codebase analysis and resolves several related test failures.

Key changes include:
- **Removed redundant Redis connection export:** Deleted 'packages/queues/src/connection.js' and removed its re-export from 'packages/queues/src/index.js'.
- **Updated Redis import paths:** Modified 'packages/api/src/app.js', 'packages/core/src/features/auth/auth.service.js', 'packages/core/src/features/token/token.service.js', 'packages/worker/src/email.processor.js', and 'packages/worker/src/index.js' to directly import 'redisConnection' from '@auth/config/redis'.
- **Fixed test files:** Updated 'packages/api/src/app.test.js', 'packages/core/src/features/auth/auth.service.test.js', and 'packages/core/src/features/token/token.service.test.js' to correctly mock and import 'redisConnection' from the new path.
- **Resolved @auth/email test failures:** Refactored 'packages/email/src/index.test.js' to correctly test 'initEmailService' failure handling, including mocking 'EmailServiceInitializationError' and removing incorrect 'process.exit' assertions.
- **Fixed ESLint import resolution:** Updated 'eslint.config.js' to use 'eslint-import-resolver-alias' with explicit mappings for '@auth/' aliases, resolving 'import/no-unresolved' errors.
- **Improved Vitest test isolation:** Added 'isolate: true', 'clearMocks: true', and 'restoreMocks: true' to all 'vitest.config.js' files to prevent test interference.
- **Modified root test script:** Changed the root 'package.json' 'test' script to run individual package tests sequentially, bypassing 'turbo's orchestration issues.

These changes ensure that all relevant tests pass and the codebase adheres to a consistent Redis connection strategy.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start-dev": "turbo dev",
     "dev:api": "pnpm --filter @auth/api dev",
     "dev:worker": "pnpm --filter @auth/worker dev",
-    "test": "turbo run test",
+    "test": "pnpm --filter @auth/api test && pnpm --filter @auth/core test && pnpm --filter @auth/email test && pnpm --filter @auth/queues test && pnpm --filter @auth/utils test && pnpm --filter @auth/worker test",
     "lint": "turbo run lint",
     "build": "turbo run build"
   },
@@ -15,6 +15,7 @@
     "@vitest/coverage-v8": "^4.0.8",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-security": "^3.0.1",
