--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "node --watch src/index.js",
+    "dev": "node --watch src/server.js",
     "test": "vitest run --coverage",
     "lint": "eslint ."
   },
@@ -14,6 +15,7 @@
     "@auth/database": "workspace:*",
     "@auth/queues": "workspace:*",
     "@auth/utils": "workspace:*",
+    "@auth/app-bootstrap": "workspace:*",
     "@exortek/express-mongo-sanitize": "^1.1.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
