--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "exports": {
-    ".": "./src/index.js",
-    "./env": "./src/env.js",
-    "./logger": "./src/logger.js",
-    "./i18n": "./src/i18n.js",
-    "./redis": "./src/redis.js",
-    "./system-logger": "./src/system-logger.js"
+    ".": {
+      "types": "./src/index.d.ts",
+      "default": "./src/index.js"
+    }
   },
   "type": "module",
   "scripts": {
@@ -25,5 +23,8 @@
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.2",
     "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/ioredis": "^5.0.0"
   }
 }
