--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,7 +4,10 @@
   "type": "module",
   "main": "src/index.js",
   "exports": {
-    ".": "./src/index.js"
+    ".": {
+      "types": "./src/index.d.ts",
+      "default": "./src/index.js"
+    }
   },
   "scripts": {
     "lint": "eslint .",
