refactor: Implement AuthService with Dependency Injection for improved modularity and testability
- Refactored auth.service.js to a class-based AuthService using Dependency Injection.
- Updated auth.controller.js to instantiate AuthService with necessary dependencies.
- Revised unit tests for auth.service.js and auth.controller.js to accommodate new structure.
- Enhanced error handling and resolved issues related to module imports and mocking.
- Created a new container.js for managing service and controller dependencies using Awilix.
- Added logger middleware tests to ensure correct logging behavior and request ID generation.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,7 @@
     "@auth/config": "workspace:*",
     "@auth/core": "workspace:*",
     "@auth/database": "workspace:*",
+    "@auth/email": "workspace:*",
     "@auth/queues": "workspace:*",
     "@auth/utils": "workspace:*",
     "@exortek/express-mongo-sanitize": "^1.1.1",
