--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
     "overrides": {
       "tmp": ">=0.2.4"
     }
-  }
+  },
+  "dependencies": {
+    "awilix": "^12.0.5"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
