feat: Implement robust email system with provider failover, Handlebars templating, enhanced circuit breaker, email logging, and webhook routes for bounce handling.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
     "@auth/app-bootstrap": "workspace:*",
     "@auth/config": "workspace:*",
     "@auth/core": "workspace:*",
+    "@auth/email": "workspace:*",
     "@auth/database": "workspace:*",
     "@auth/queues": "workspace:*",
     "@auth/utils": "workspace:*",
