--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@auth/config": "workspace:*",
     "@auth/utils": "workspace:*",
-    "nodemailer": "^7.0.10",
-    "opossum": "^9.0.0",
+    "@auth/database": "workspace:*",
+    "nodemailer": "^6.9.16",
+    "opossum": "^8.1.4",
+    "handlebars": "^4.7.8",
     "resend": "^6.4.2"
   },
   "devDependencies": {
