feat: Add detailed SMTP configuration including primary, fallback, and test settings.

--- a/.env.example
+++ b/.env.example
@@ -19,12 +19,20 @@ JWT_REFRESH_EXPIRATION_DAYS=30
 JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
 
-# Email Service (e.g., Resend, Mailgun, SendGrid)
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
-EMAIL_PASS=
-EMAIL_FROM=support@example.com
+# Email Service (Primary: Resend)
+SMTP_HOST=smtp.resend.com
+SMTP_PORT=465
+SMTP_USER=resend
+SMTP_PASS=re_your_resend_api_key_here
+
+# Email Service (Fallback: Gmail or SendGrid)
+SMTP_FALLBACK_HOST=smtp.gmail.com
+SMTP_FALLBACK_PORT=587
+SMTP_FALLBACK_USER=your-email@gmail.com
+SMTP_FALLBACK_PASS=your-gmail-app-password
+
+# Email From Address (use your verified domain in production)
+EMAIL_FROM=noreply@yourdomain.com
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=60000
