--- a/.env.test
+++ b/.env.test
@@ -7,3 +7,10 @@ MONGO_URI="mongodb://localhost:27017/auth_test_db"
 CLIENT_URL="http://localhost:3000"
 REDIS_URL="redis://localhost:6379"
 LOG_LEVEL=silent
+
+# Fake SMTP configuration for tests (prevents real emails)
+SMTP_HOST=smtp.ethereal.email
+SMTP_PORT=587
+SMTP_USER=fake-test-user@ethereal.email
+SMTP_PASS=fake-test-password
+EMAIL_FROM=test@example.com
