--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,7 @@
   "types": "src/index.d.ts",
   "scripts": {
     "dev": "node --watch src/server.js",
+    "start": "node src/server.js",
     "test": "vitest run --coverage",
     "lint": "eslint ."
   },
@@ -14,8 +15,8 @@
     "@auth/app-bootstrap": "workspace:*",
     "@auth/config": "workspace:*",
     "@auth/core": "workspace:*",
-    "@auth/email": "workspace:*",
     "@auth/database": "workspace:*",
+    "@auth/email": "workspace:*",
     "@auth/queues": "workspace:*",
     "@auth/utils": "workspace:*",
     "@exortek/express-mongo-sanitize": "^1.1.1",
@@ -24,7 +25,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
-    "mongoose": "^8.20.0",
+    "mongoose": "^9.0.0",
     "pino-pretty": "^13.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
