--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "packageManager": "pnpm@10.19.0",
   "pnpm": {
     "overrides": {
-      "tmp": ">=0.2.4"
+      "tmp": ">=0.2.4",
+      "vite": "npm:rolldown-vite@7.2.5"
     }
   }
 }
