feat: Add Vercel build configuration and update rewrite rules to serve assets and redirect other paths to index.html.

--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -1,7 +1,13 @@
 {
+    "buildCommand": "pnpm build",
+    "outputDirectory": "dist",
     "rewrites": [
         {
-            "source": "/((?!assets/).*)",
+            "source": "/assets/(.*)",
+            "destination": "/assets/$1"
+        },
+        {
+            "source": "/(.*)",
             "destination": "/index.html"
         }
     ]
