--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -1,15 +1,5 @@
 {
-    "installCommand": "pnpm install",
+    "framework": "vite",
     "buildCommand": "pnpm build",
-    "outputDirectory": "dist",
-    "rewrites": [
-        {
-            "source": "/assets/(.*)",
-            "destination": "/assets/$1"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ]
+    "outputDirectory": "dist"
 }
