--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,10 +14,13 @@
     "@auth/utils": "workspace:*",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "i18next": "^25.6.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.3.5",
     "react-router-dom": "^7.9.6",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
