--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -1,5 +1,11 @@
 {
     "framework": "vite",
     "buildCommand": "pnpm build",
-    "outputDirectory": "dist"
+    "outputDirectory": "dist",
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
+    ]
 }
