--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 # Application
 PORT=3000
 NODE_ENV=development
+CLIENT_URL=https://devsdaily.qzz.io
 
 # Database (MongoDB)
 MONGODB_URI=mongodb://localhost:27017/auth_db
@@ -19,20 +20,21 @@ JWT_REFRESH_EXPIRATION_DAYS=30
 JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
 
-# Email Service (Primary: Resend)
-SMTP_HOST=smtp.resend.com
-SMTP_PORT=465
-SMTP_USER=resend
-SMTP_PASS=re_your_resend_api_key_here
+# Email Service (Primary: Resend API)
+RESEND_API_KEY=re_your_resend_api_key_here
+RESEND_WEBHOOK_SECRET=whsec_your_webhook_signing_secret_here
 
-# Email Service (Fallback: Gmail or SendGrid)
-SMTP_FALLBACK_HOST=smtp.gmail.com
-SMTP_FALLBACK_PORT=587
-SMTP_FALLBACK_USER=your-email@gmail.com
-SMTP_FALLBACK_PASS=your-gmail-app-password
+# Email Service (Fallback: Gmail SMTP - optional)
+# Only configure if you want SMTP fallback when Resend fails
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-gmail-app-password
 
 # Email From Address (use your verified domain in production)
-EMAIL_FROM=noreply@yourdomain.com
+# For testing: onboarding@resend.dev
+# For production: support@yourdomain.com
+EMAIL_FROM=support@devsdaily.qzz.io
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=60000
