feat: Add health check endpoints and introduce contract interfaces for services

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth/config": "workspace:*",
+    "@auth/contracts": "workspace:*",
     "@auth/database": "workspace:*",
     "@auth/email": "workspace:*",
     "@auth/queues": "workspace:*",
