--- a/packages/queues/package.json
+++ b/packages/queues/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@auth/config": "workspace:*",
+    "@auth/contracts": "workspace:*",
     "@auth/utils": "workspace:*",
     "bullmq": "^5.65.1",
     "ioredis": "^5.8.2",
