--- a/packages/queues/package.json
+++ b/packages/queues/package.json
@@ -20,6 +20,7 @@
     "@auth/config": "workspace:*",
     "@auth/contracts": "workspace:*",
     "@auth/utils": "workspace:*",
+    "@opentelemetry/api": "^1.9.0",
     "bullmq": "^5.65.1",
     "ioredis": "^5.8.2",
     "zod": "^4.1.13"
