--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,9 @@
     },
     "lint": {},
     "dev": {
+      "dependsOn": [
+        "^build"
+      ],
       "cache": false,
       "persistent": true
     },
