--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "lint": "turbo run lint",
     "build": "turbo run build",
     "typecheck": "turbo run typecheck",
-    "agent:start": "docker compose -f docker-compose.grafana.yml up -d",
-    "agent:stop": "docker compose -f docker-compose.grafana.yml down",
-    "agent:logs": "docker compose -f docker-compose.grafana.yml logs -f grafana-agent",
-    "agent:restart": "pnpm agent:stop && pnpm agent:start"
+    "kill": "pkill -9 -f 'tsx.*server.ts' && pkill -9 -f 'turbo dev'"
   },
   "devDependencies": {
     "@auth/eslint-config": "workspace:*",
