--- a/packages/app-bootstrap/package.json
+++ b/packages/app-bootstrap/package.json
@@ -9,6 +9,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "typecheck": "tsc --noEmit"
