build: Update package exports and main entry points to reference compiled distribution files and type declarations.

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -13,7 +13,7 @@
       "import": "./dist/observability/index.js"
     },
     "./locales/*": {
-      "import": "./src/locales/*"
+      "import": "./dist/locales/*"
     }
   },
   "type": "module",
