--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,23 +1,24 @@
 {
   "name": "@auth/core",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "engines": {
     "node": ">=20.0.0"
   },
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     },
     "./constants/auth.constants": {
-      "types": "./src/constants/auth.constants.ts",
-      "import": "./src/constants/auth.constants.ts"
+      "types": "./dist/constants/auth.constants.d.ts",
+      "import": "./dist/constants/auth.constants.js"
     },
     "./constants/token.constants": {
-      "types": "./src/constants/token.constants.ts",
-      "import": "./src/constants/token.constants.ts"
+      "types": "./dist/constants/token.constants.d.ts",
+      "import": "./dist/constants/token.constants.js"
     }
   },
   "scripts": {
