--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -37,13 +37,14 @@
     "@sentry/node": "^10.29.0",
     "@sentry/profiling-node": "^10.29.0",
     "dotenv": "^17.2.3",
-    "i18next": "^25.7.1",
+    "i18next": "^25.7.2",
     "i18next-fs-backend": "^2.6.1",
-    "i18next-http-middleware": "^3.8.2",
+    "i18next-http-middleware": "^3.9.0",
     "ioredis": "^5.8.2",
     "opossum": "^9.0.0",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
+    "pino-loki": "^2.6.0",
     "pino-pretty": "^13.1.3",
     "zod": "^4.1.13"
   },
