--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -58,6 +58,7 @@
     "test": "vitest run --coverage"
   },
   "dependencies": {
+    "@auth/contracts": "workspace:*",
     "opossum": "^9.0.0",
     "zod": "^4.1.13"
   },
