--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -42,6 +42,7 @@
     "@auth/core": "workspace:*",
     "@auth/database": "workspace:*",
     "@auth/email": "workspace:*",
+    "@auth/observability": "workspace:*",
     "@auth/queues": "workspace:*",
     "@auth/utils": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
