refactor: Relocate tracing utilities from `@auth/utils` to `@auth/observability` and refine observability configuration loading.

--- a/packages/app-bootstrap/package.json
+++ b/packages/app-bootstrap/package.json
@@ -22,6 +22,7 @@
     "@auth/contracts": "workspace:*",
     "@auth/database": "workspace:*",
     "@auth/email": "workspace:*",
+    "@auth/observability": "workspace:*",
     "@auth/queues": "workspace:*",
     "@auth/utils": "workspace:*"
   },
