--- a/packages/queues/package.json
+++ b/packages/queues/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@auth/config": "workspace:*",
     "@auth/contracts": "workspace:*",
+    "@auth/observability": "workspace:*",
     "@auth/utils": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
     "bullmq": "^5.65.1",
