feat: Introduce new `i18n`, `logger`, and `redis` packages, refactor locale files, and update API, queue, and observability services.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,11 +17,13 @@
     "@auth/app-bootstrap": "workspace:*",
     "@auth/config": "workspace:*",
     "@auth/contracts": "workspace:*",
-    "@auth/observability": "workspace:*",
     "@auth/core": "workspace:*",
     "@auth/database": "workspace:*",
     "@auth/email": "workspace:*",
+    "@auth/i18n": "workspace:*",
+    "@auth/observability": "workspace:*",
     "@auth/queues": "workspace:*",
+    "@auth/redis": "workspace:*",
     "@auth/utils": "workspace:*",
     "@auth/worker": "workspace:*",
     "@exortek/express-mongo-sanitize": "^1.1.1",
