--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,15 +7,12 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
-    },
-    "./locales/*": {
-      "import": "./dist/locales/*"
     }
   },
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "build": "tsc && cp -r src/locales dist/",
+    "build": "tsc",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -24,19 +21,11 @@
     "@sentry/node": "^10.29.0",
     "@sentry/profiling-node": "^10.29.0",
     "dotenv": "^17.2.3",
-    "i18next": "^25.7.2",
-    "i18next-fs-backend": "^2.6.1",
-    "i18next-http-middleware": "^3.9.0",
-    "ioredis": "^5.8.2",
-    "opossum": "^9.0.0",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
     "zod": "^4.1.13"
   },
-  "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/ioredis": "^5.0.0"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=20.0.0"
   }
