--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,12 +28,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@auth/app-bootstrap": "workspace:*",
     "@auth/config": "workspace:*",
     "@auth/contracts": "workspace:*",
     "@auth/database": "workspace:*",
     "@auth/email": "workspace:*",
+    "@auth/i18n": "workspace:*",
     "@auth/observability": "workspace:*",
     "@auth/queues": "workspace:*",
+    "@auth/redis": "workspace:*",
     "@auth/utils": "workspace:*",
     "@sentry/node": "^10.29.0",
     "awilix": "^12.0.5",
