--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -20,6 +20,7 @@
     "@auth/config": "workspace:*",
     "@auth/contracts": "workspace:*",
     "@auth/database": "workspace:*",
+    "@auth/i18n": "workspace:*",
     "@auth/observability": "workspace:*",
     "@auth/utils": "workspace:*",
     "handlebars": "^4.7.8",
