--- a/packages/observability/package.json
+++ b/packages/observability/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@auth/config": "workspace:*",
+        "@auth/logger": "workspace:*",
         "@auth/contracts": "workspace:*",
         "@opentelemetry/api": "^1.9.0",
         "@opentelemetry/auto-instrumentations-node": "^0.67.2",
@@ -28,10 +29,7 @@
         "@opentelemetry/sdk-metrics": "^2.2.0",
         "@opentelemetry/sdk-node": "^0.208.0",
         "@opentelemetry/sdk-trace-base": "^2.2.0",
-        "@opentelemetry/semantic-conventions": "^1.38.0",
-        "pino": "^10.1.0",
-        "pino-loki": "^2.6.0",
-        "pino-pretty": "^13.1.3"
+        "@opentelemetry/semantic-conventions": "^1.38.0"
     },
     "devDependencies": {
         "@types/node": "^22.15.23"
