--- a/packages/observability/package.json
+++ b/packages/observability/package.json
@@ -18,8 +18,8 @@
     },
     "dependencies": {
         "@auth/config": "workspace:*",
-        "@auth/logger": "workspace:*",
         "@auth/contracts": "workspace:*",
+        "@auth/logger": "workspace:*",
         "@opentelemetry/api": "^1.9.0",
         "@opentelemetry/auto-instrumentations-node": "^0.67.2",
         "@opentelemetry/exporter-metrics-otlp-http": "^0.208.0",
@@ -29,7 +29,9 @@
         "@opentelemetry/sdk-metrics": "^2.2.0",
         "@opentelemetry/sdk-node": "^0.208.0",
         "@opentelemetry/sdk-trace-base": "^2.2.0",
-        "@opentelemetry/semantic-conventions": "^1.38.0"
+        "@opentelemetry/semantic-conventions": "^1.38.0",
+        "@sentry/node": "^10.29.0",
+        "@sentry/profiling-node": "^10.29.0"
     },
     "devDependencies": {
         "@types/node": "^22.15.23"
