--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@auth/contracts": "workspace:*",
+    "@auth/logger": "workspace:*",
     "@auth/utils": "workspace:*",
     "@sentry/node": "^10.29.0",
     "@sentry/profiling-node": "^10.29.0",
@@ -25,7 +26,6 @@
     "pino-pretty": "^13.1.3",
     "zod": "^4.1.13"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=20.0.0"
   }
